--- a/ms.tex
+++ b/ms.tex
@@ -15,7 +15,7 @@
 \begin{centering}
 \begin{LARGE}
 %  Scaling Information for 
-Supplement for Three Projects in Astrophysical Magnetohydrodynamics
+Supplement for Four Projects in Astrophysical Magnetohydrodynamics
 \end{LARGE}
 
 
@@ -25,7 +25,21 @@ Supplement for Three Projects in Astrophysical Magnetohydrodynamics
 \end{centering}
 \pagestyle{plain}
 
-\input{supplement}
+
+\def\request{151,000}
+\def\forcing{\ensuremath{\eta}}
+\def\mach{\ensuremath{\mathcal{M}_{S}}}
+\def\xis{0}
+\def\xic{1}
+\def\tdyn{\ensuremath{t_{\rm{dyn}}}}
+\def\Mach{\ensuremath{M_{S}}}
+\def\Nu{\ensuremath{N_U}}
+
+\input{intro}
+
+\input{motivation}
+
+\input{timing}
 
 %\appendix
 %\include{ appendix file}
