--- a/intro.tex
+++ b/intro.tex
@@ -1,16 +1,21 @@
 
-We are requesting a supplement of \request\ on \emph{Stampede 2} to our existing ACCESS allocation.
+We are requesting  \request\ SUs  on \emph{Stampede 2} and
+\requestdisk\ Gb on Ranch to supplement our existing ACCESS allocation.
 Our allocation supports four projects in astrophysical plasmas. One of which is
-a study of the statistics of supersonic turbulence, wherein we develop a number
+a study of the statistics of supersonic isothermal turbulence, wherein we have developed a number
 of interesting analytic models for the correlations between density and
-velocity in such flows.  This is a new line of inquiry for us, and our previous
-ACCESS request was conservative as we finished the models.  We have now finished
-the models, published the first paper on the topic, and performed the proposed
-simulations.  It is now time to complete the study.
+velocity in such flows.  Our previous
+ACCESS request was conservative as we finished the models and performed
+preliminary runs.  We have now finished
+the models, performed the
+preliminary
+simulations, and published the first paper on the topic.  It is now time to complete the study.
 
 We recognize that this request is somewhat larger than our initial request, and
 that \emph{Stampede 2} is nearing the end of its life.   We are confident that
 we can perform the simulations and analyze the results in a matter of weeks from
 the approval of this supplement.   We are proposing 12 simulations that will
-each take about 9 days on 64 KNL nodes, and several will be run concurrently.
+each take about 9 days on 64 KNL nodes, and they will be run in three batches of
+four concurrent simulations.  Thus the simulations will be completed by the end
+of March 2023. 
 
