--- a/ms.tex
+++ b/ms.tex
@@ -15,7 +15,7 @@
 \begin{centering}
 \begin{LARGE}
 %  Scaling Information for 
-Supplement for Four Projects in Astrophysical Magnetohydrodynamics
+Supplement for ``Four Projects in Astrophysical Magnetohydrodynamics''
 \end{LARGE}
 
 
@@ -27,6 +27,7 @@ Supplement for Four Projects in Astrophysical Magnetohydrodynamics
 
 
 \def\request{151,000}
+\def\requestdisk{76,800}
 \def\forcing{\ensuremath{\eta}}
 \def\mach{\ensuremath{\mathcal{M}_{S}}}
 \def\xis{0}
