--- a/tableX.tex
+++ b/tableX.tex
@@ -15,8 +15,8 @@
                      4.0       &     1.0       &    1.25               &5.4\sci{-6}               &2.3\sci{5}       &   168.6       &1.1\sci{4}             \\
                     10.0       &     1.0       &     0.5               &2.5\sci{-6}               &2.0\sci{5}       &   148.3       &9.5\sci{3}             \\
   \hline                                                                                                                                               
-               &                               &                       &                       &               &      SU       &1.5\sci{5}             \\
-               &                               &                       &                       &               &    Disk       &9.6\sci{3}      Gb     \\
+               &                               &                       &                       &               &Total SU       &1.5\sci{5}             \\
+               &                               &                       &                       &               &Disk (Gb)       &7.7\sci{4}             \\
 \end{tabular}                                                                                                                                               
 \end{center}                                                                                                                                               
 \end{table}                                                                                                                                                
