--- a/ms.tex
+++ b/ms.tex
@@ -1,7 +1,7 @@
 %\documentclass[11pt]{article}  % for e-submission to ApJ
 \documentclass[11pt]{NSF}  % for e-submission to ApJ
 
-
+\input{Geometry}
 \usepackage{graphicx, natbib, color, bm, amsmath, epsfig}
 \usepackage{wrapfig}
 \input{aas_papers.tex}
